# YourWorkspace

./: .env.example  .gitignore  DEVELOPMENT.md  DOCKER.md  DOING_PAGE_FIXES_SUMMARY.md  LICENSE  MVP-COMPLETION-SUMMARY.md  README-SYSTEM.md  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start-app.sh  test.py  test_add_button.html  test_todo_add.js  下一步.txt
backend/: .dockerignore  .env.swp  .requirements.txt.swp  Dockerfile  README.md  create_test_data.py  docker-entrypoint.sh  init_db.py  pyproject.toml  requirements.txt  run.py  test_api.py  test_login.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  achievements_bp.py  ai_bp.py  anchor_bp.py  auth_bp.py  blog_bp.py  plans_bp.py  todo_bp.py
backend/app/models/: __init__.py  achievement.py  base.py  future_plan.py  todo_item.py  token_blocklist.py  user.py  user_profile.py
backend/app/utils/: __init__.py  api_responses.py  request_validation.py
backend/migrations/versions/: 24a4052d587a_add_skill_and_summary_columns_to_user_.py  3fc71ac4f693_add_is_current_focus_to_todoitem_model.py  43e8f5ed2be4_add_futureplan_model.py  8c768b353f4b_.py  a1b2c3d4e5f6_add_title_field_to_future_plans_table.py  add_title_field_to_future_plans.py  c480e6462c43_initial_migration_from_existing_database.py  c9975fc897ec_fix_add_currentfocusitem_model.py
backend/prompts/frontend/: phase1.txt  phase1frame.txt
backend/static/: index.html
backend/tests/: check_users.py  create_user.py  test_anchor_api.py  test_api_endpoints.py  test_auth_api.py  test_todo_api.py
(+252 files in other folders)
