[tool.poetry]
name = "YourWorkplace"
version = "0.1.0"
description = ""
authors = ["gellar <gellar@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
requests = "^2.32.3"
flask-cors = "^5.0.1"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
